snow.com (archived on 2009-06-16)
{
  "alexa_rank": 33436,
  "analysis_subcorpus": true,
  "categories": "business;travel",
  "char_count": 12451,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.2,
  "homepage_snapshot_redirected_domain": "snow.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090327044744id_/http://www.snow.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090327044744id_/http%3A//snow.com",
  "interval": "2009_A",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "snow.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090616145648id_/http%3A//www.snow.com/privacy.aspx",
  "policy_title": "Privacy Statement | Snow.com",
  "policy_url": "snow.com/privacy.aspx",
  "sha1": "d74a1afa0cadbed86558858a63b0f3ad6872a737",
  "simhash": 2112920087815959103,
  "simhash_updated": true,
  "site_hostname": "snow.com",
  "site_url": "http://snow.com",
  "smog": 14.51,
  "strict_updated": true,
  "timestamp": "20090616145648",
  "word_count": 2023,
  "year": 2009
}

--- a/s/sn/sno/snow.com.html
+++ b/s/sn/sno/snow.com.html
@@ -1,12 +1,12 @@
-<!--The following is the downloaded HTML source of the snow.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216005506id_/http%3A//www.snow.com/privacy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the snow.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616145648id_/http%3A//www.snow.com/privacy.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head id="Head2"><title>
 	Privacy Statement | Snow.com
 </title><link rel="stylesheet" type="text/css" href="/vailresorts/sites/snow/assets/css/global/master.css"><link rel="stylesheet" type="text/css" href="/vailresorts/sites/snow/assets/css/module/topnav.css"><link rel="stylesheet" type="text/css" href="/vailresorts/sites/snow/assets/css/module/footer.css"><link rel="stylesheet" type="text/css" href="/vailresorts/sites/snow/assets/css/module/tabs.css"><link rel="stylesheet" type="text/css" href="/vailresorts/sites/snow/assets/css/template/rss.css"><link rel="stylesheet" type="text/css" href="/vailresorts/sites/snow/assets/css/template/search_results.css"><link rel="stylesheet" type="text/css" href="/vailresorts/sites/snow/assets/css/global/print.css" media="print"><meta name="keywords" content="privacy policy, vail resorts, privacy statement, "><meta name="description" content="At Vail Resorts we recognize that privacy is important. This privacy policy applies to all of the products, services  offered by Vail Resorts Inc. "></head>
 <body class="safari safari537_36"><form name="form1" method="post" action="/privacy.aspx" id="form1">
 <div>
-<input type="hidden" name="__VIEWSTATE" id="__VIEWSTATE" value="/wEPDwUKMTIzMjQ1MjYwMWRkddD3tUm2o6bhL+hiVi/Xiu29cGs=">
+<input type="hidden" name="__VIEWSTATE" id="__VIEWSTATE" value="/wEPDwULLTE4NzYyMzA4ODVkZBoWiFed1MVcC6AkHcLH7IPMYQ6R">
 </div>
 
 <div id="divCanvas1" class="canvas">
@@ -115,7 +115,9 @@
 <li class="videos"><a href="http://www.snow.com/mountainconditions/videos.aspx">Videos</a></li>
 <li class="photos last"><a class="last" href="http://www.snow.com/mountainconditions/photos.aspx">Photos</a></li>
 </ul></li>
-<li class="epic pass"><a class="tab" href="http://www.snow.com/epicpass/epicpass.aspx">Epic Pass</a><ul class="menu shadow hide" style="visibility: hidden;"><li class="epicpassfaqs last"><a class="last" href="http://faq.snow.com/faqdetail/Epic-Pass.axd">FAQs</a></li>
+<li class="epic pass"><a class="tab" href="http://www.snow.com/epicpass/home.aspx">Epic Pass</a><ul class="menu shadow hide" style="visibility: hidden;"><li class="buynow"><a href="https://onestore.snow.com/snow/estore.asp?action=SetEStore&amp;storeType=PassEStore">Buy Now</a></li>
+<li class="pricecomparison"><a href="http://snow.com/epicpass/info/compare.asp">Price Comparison</a></li>
+<li class="epicpassfaqs last"><a class="last" href="http://faq.snow.com/faqdetail/Epic-Pass.axd">FAQs</a></li>
 </ul></li>
 
 		</ul>
@@ -137,7 +139,7 @@
 <li class="photos"><a href="http://www.snow.com/mountainconditions/photos.aspx">Photos</a></li>
 <li class="videos last"><a class="last" href="http://www.snow.com/mountainconditions/videos.aspx">Videos</a></li>
 </ul></li>
-<li class="peaks rewards"><a class="tab" href="http://www.snow.com/peaks/peaks-rewards.aspx">Peaks Rewards</a></li>
+<li class="peaks rewards"><a class="tab" href="http://www.snow.com/peaks/peaks-rewards-summer.aspx">Peaks Rewards</a></li>
 <li class="account"><a class="tab" href="http://www.snow.com/my%20account.aspx">My Account</a></li>
 
 		</ul>
@@ -214,6 +216,14 @@
 	<!-- BOTTOM -->
 	<div id="canvas_bottom">
 <div id="footer">
+	<div class="partners">
+		<div class="pepsi"><a href="/partners.aspx"><img src="/vailresorts/sites/snow/assets/img/footer/partnerlogos/blank.gif" alt="Pepsi" width="77" height="30"></a></div>
+		<img src="/vailresorts/sites/snow/assets/img/footer/partnerlogos/spacer.gif" align="absmiddle" style="float:left">
+		<div class="budlight"><a href="/partners.aspx"><img src="/vailresorts/sites/snow/assets/img/footer/partnerlogos/blank.gif" alt="Bud Light" width="117" height="30"></a></div>
+		<img src="/vailresorts/sites/snow/assets/img/footer/partnerlogos/spacer.gif" align="absmiddle" style="float:left">
+		<div class="volvo"><a href="/partners.aspx"><img src="/vailresorts/sites/snow/assets/img/footer/partnerlogos/blank.gif" alt="Volvo" width="26" height="30"></a></div>
+	</div>
+	<br class="clear">
 	<div class="uptodate">
 		<div class="title">Stay Up To Date</div>
 		<ul class="links">
@@ -237,7 +247,11 @@
 <li class="last"><a href="http://www.snow.com/customer%20service/customerservice.aspx">Customer Service</a></li>
 
 		</ul>
-		<div class="copyright">© 2007-2008 Vail Resorts Management Company All Resorts Reserved</div>
+		<div class="copyright">
+			© 2007-2009 Vail Resorts Management Company All Resorts Reserved
+			&nbsp;&nbsp;
+			
+		</div>
 	</div>
 </div>
 <div id="shadow_bottom"></div>
@@ -360,6 +374,8 @@ if ($.browser.msie && $.browser.version < 7) {
 })(jQuery);
 </script>
 <!-- Control: Required for tagging (Global) -->
+
+
 
 
 <!-- SiteCatalyst code version: H.16.
