--- a/t/to/top/topseos.com.html
+++ b/t/to/top/topseos.com.html
@@ -1,25 +1,24 @@
-<!--The following is the downloaded HTML source of the topseos.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216023902id_/http%3A//www.topseos.com/privacy_policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the topseos.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616151949id_/http%3A//www.topseos.com/privacy_policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
-<title>Search Engine Optimization - Organic SEO, PPC, SEM and Internet Marketing Companies Ranked.</title>
+<title>Rankings of Best SEO, PPC, Web Design and Development, Hosting, Local Search, Reputation Management Companies, Firms, Agencies, Firm, Company.</title>
 <meta http-equiv="Content-type" content="text/html;charset=utf-8">
-<meta name="description" content="Search Engine Optimization company services are reviewed and promoted by topseos.com. Organic Search Engine Optimization (SEO), Pay-Per-Click (PPC), Email Marketing, Web Content Management and Web Analytics.">
+<meta name="description" content="Rankings of best search engine optimization (SEO), pay per click (PPC), training programs, mobile optimization, local search, social media optimization, reputation management, affiliate marketing, copywriting, and hosting company services are reviewed.">
 <meta name="verify-v1" content="rF5otuMukxgb9BXjnGedc807+YINX8DwUMv84S+erzY=">
 <meta name="keywords" content="topseos, Search Engine Optimization , Organic SEO, PPC, SEM and Internet Marketing Companies Ranked.">
 <link rel="icon" href="/favicon.jpg" type="image/x-icon">
 <link rel="shortcut icon" href="/favicon.jpg" type="image/x-icon">
-		
-<link type="text/css" href="http://www.topseos.com/css/front_css/_cmp_cssscreen_14b0177114b5cc935ed92035327c2a37.php" rel="stylesheet" media="screen">
+<link type="text/css" href="http://www.topseos.com/css/front_css/_cmp_cssscreen_833ae21226b7033cc81aeccb10343df9.php" rel="stylesheet" media="screen">
 <script type="text/javascript">
 	var _host = 'http://www.topseos.com/';
 </script>
 
-<script type="text/javascript" src="http://www.topseos.com/js/_cmp_javascript_bbbd53c7d6cec06e002509cbb5e923b4.php"></script></head>
+<script type="text/javascript" src="http://www.topseos.com/js/_cmp_javascript_a3834f7122b95c036b775a3558675b52.php"></script></head>
 <body>
 <!-- Top Banner --> 
 <div id="top_banner">
-	<a href="http://www.increasevisibility.com" rel="nofollow" onclick="stat('187'); window.open(this.href); return false;"><img src="/files/banners/increasevisibilitylarge182.JPG" alt="Website Marketing Services" width="728" height="90"></a></div>
+	<a href="http://www.webimax.com/PPC_Services.aspx" rel="nofollow" onclick="stat('470'); window.open(this.href); return false;"><img src="/files/banners/webimaxlarge125.gif" alt="An Innovation in Marketing" width="728" height="90"></a></div>
 <!-- Top Banner -->
 <!--Top Header Menu  -->
 <div id="top_menu">
@@ -69,13 +68,13 @@
 			<li class="under_header_menu_title">Edition:</li>
 			<li class="first_menu_item active"><a href="#">U.S.</a></li>
 			<li>
-				<a href="http://www.topseos.com/best-seo-and-ppc-companies-in-united-kingdom">U.K</a></li>
+				<a href="http://uk.topseos.com/rankings">U.K</a></li>
 			<li>
-				<a href="http://www.topseos.com/best-seo-and-ppc-companies-in-canada">Canada</a></li>
+				<a href="http://canada.topseos.com/rankings">Canada</a></li>
 			<li>
-				<a href="http://www.topseos.com/best-seo-and-ppc-companies-in-india">India</a></li>
+				<a href="http://www.topseos.in/rankings">India</a></li>
 			<li>
-				<a href="http://www.topseos.com/best-seo-and-ppc-companies-in-australia">Australia</a></li>
+				<a href="http://australia.topseos.com/rankings">Australia</a></li>
 		</ul>
     	</div>
 	
@@ -166,7 +165,7 @@
 	
 	<!-- Footer Copy -->
 	<div id="copyright">
-	    <p>Copyright © 2008 topseos.com. All Rights Reserved.</p>
+	    <p>Copyright © 2009 topseos.com. All Rights Reserved.</p>
 		<ul>
 		    <li id="terms_of_use"><a href="http://www.topseos.com/terms_of_use">Terms of Use</a></li>
 			<li id="privacy_policy"><a href="http://www.topseos.com/privacy_policy">Privacy Policy</a></li>
@@ -196,14 +195,26 @@
 	</div>
 	<!--/Footer Valid --> 
 	
-</div><script type="text/javascript">
+</div><!--
+<script type="text/javascript">
 	var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 	document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
+</script>
 <script type="text/javascript">
 	var pageTracker = _gat._getTracker("UA-680259-1");
 	// pageTracker._initData();
 	pageTracker._trackPageview();
 </script>
+-->
+<script type="text/javascript">
+	var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+	document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
+<script type="text/javascript">
+try {
+var pageTracker = _gat._getTracker("UA-680259-1");
+	pageTracker._trackPageview();
+} catch(err) {}</script>
+
 
 </body></html>
