--- a/s/st/sta/startv.com.html
+++ b/s/st/sta/startv.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the startv.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216015417id_/http%3A//www.startv.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the startv.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616152507id_/http%3A//www.startv.com/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -42,11 +42,11 @@ function MM_swapImage() { //v3.0
 <div style="background-color:#85959e; width:780px; text-align:center;">
   <table border="0" align="center" cellpadding="0" cellspacing="0">
     <tbody><tr>
-      <td><a id="GenericLink" href="/brunei.html"><img src="http://www.startv.com/images/topnav/home.gif" border="0" alt="Home" onmouseover="this.src='http://www.startv.com/images/topnav/home_on.gif';" onmouseout="this.src='http://www.startv.com/images/topnav/home.gif';"></a></td>
+      <td><a id="GenericLink" href="/usa.html"><img src="http://www.startv.com/images/topnav/home.gif" border="0" alt="Home" onmouseover="this.src='http://www.startv.com/images/topnav/home_on.gif';" onmouseout="this.src='http://www.startv.com/images/topnav/home.gif';"></a></td>
       <td><img src="http://www.startv.com/images/topnav/sep.gif" width="2" height="25" alt=""></td>
-      <td><a id="ExternalLink" href="/schedules/BN"><img src="http://www.startv.com/images/topnav/schedules.gif" border="0" alt="TV Schedules" onmouseover="this.src='http://www.startv.com/images/topnav/schedules_on.gif';" onmouseout="this.src='http://www.startv.com/images/topnav/schedules.gif';"></a></td>
+      <td><a id="ExternalLink" href="/schedules/US"><img src="http://www.startv.com/images/topnav/schedules.gif" border="0" alt="TV Schedules" onmouseover="this.src='http://www.startv.com/images/topnav/schedules_on.gif';" onmouseout="this.src='http://www.startv.com/images/topnav/schedules.gif';"></a></td>
       <td><img src="http://www.startv.com/images/topnav/sep.gif" width="2" height="25" alt=""></td>
-      <td><a id="ExternalLink_0" href="/channels/BN"><img src="http://www.startv.com/images/topnav/channels.gif" border="0" alt="Channels" onmouseover="this.src='http://www.startv.com/images/topnav/channels_on.gif';" onmouseout="this.src='http://www.startv.com/images/topnav/channels.gif';"></a></td>
+      <td><a id="ExternalLink_0" href="/channels/US"><img src="http://www.startv.com/images/topnav/channels.gif" border="0" alt="Channels" onmouseover="this.src='http://www.startv.com/images/topnav/channels_on.gif';" onmouseout="this.src='http://www.startv.com/images/topnav/channels.gif';"></a></td>
       <td><img src="http://www.startv.com/images/topnav/sep.gif" width="2" height="25" alt=""></td>
       <td><a id="GenericLink_0" href="http://www.startv.com/corporate/howtoget/index.htm"><img src="http://www.startv.com/images/topnav/howtogetstar.gif" border="0" alt="How To Get STAR" onmouseover="this.src='http://www.startv.com/images/topnav/howtogetstar_on.gif';" onmouseout="this.src='http://www.startv.com/images/topnav/howtogetstar.gif';"></a></td>
       <td><img src="http://www.startv.com/images/topnav/sep.gif" width="2" height="25" alt=""></td>
@@ -70,7 +70,7 @@ function MM_swapImage() { //v3.0
 <table width="780" border="0" cellpadding="0" cellspacing="0" style="text-align:left;">
   <tbody><tr>
     <td><a href="/" class="breadcrumb">Home</a> &gt; <a href="/corporate/" class="breadcrumb">Corporate</a></td>
-    <td align="right" class="breadcrumb">Tuesday 16 Dec 2008, 09:54&nbsp;
+    <td align="right" class="breadcrumb">Tuesday 16 Jun 2009, 08:25&nbsp;
 </td>
   </tr>
 </tbody></table>
