--- a/e/ep/epa/epanorama.net.html
+++ b/e/ep/epa/epanorama.net.html
@@ -1,18 +1,11 @@
-<!--The following is the downloaded HTML source of the epanorama.net privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216021144id_/http%3A//www.epanorama.net/index.php%3Findex%3Dprivacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the epanorama.net privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616152611id_/http%3A//www.epanorama.net/index.php%3Findex%3Dprivacy) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <title>ePanorama.net</title>
 <link href="/css/style.css" rel="stylesheet" type="text/css">
 <link href="/css/print.css" rel="stylesheet" type="text/css" media="print">
-
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
-</script>
-<script type="text/javascript">
-_uacct = "UA-272685-1";
-urchinTracker();
-</script>
 
 <script type="text/javascript">
 <!--
@@ -43,6 +36,10 @@ if (document.images) {
 	software_btn.src = "/images/software-btn.jpg";
 	var software_btn_over = new Image();
 	software_btn_over.src = "/images/software-btn-over.jpg";
+	var blog_btn=new Image();
+	blog_btn.src="/images/blog_btn.jpg";
+	var blog_btn_over=new Image();
+	blog_btn_over.src="/images/blog_btn_over.jpg";
 	var rfc_btn = new Image();
 	rfc_btn.src = "/images/rfc-btn.jpg";
 	var rfc_btn_over = new Image();
@@ -59,9 +56,7 @@ if (document.images) {
 // -->
 </script>
 
-<!-- BEGIN STANDARD TAG - popunder only - ROS: Run-of-site - DO NOT MODIFY -->
-<script type="text/javascript" src="http://ad.globalinteractive.com/st?ad_type=pop&amp;ad_size=0x0&amp;section=273888&amp;banned_pop_types=29&amp;pop_times=1&amp;pop_frequency=86400&amp;nopopblocking=1"></script>
-<!-- END TAG -->
+
 </head>
 <body bgcolor="#FFFFFF"> 
 
@@ -88,8 +83,9 @@ google_color_border = "336699";
 <a href="/index.php?index=link" onmouseover="changeImages('links_btn', 'links_btn_over')" onmouseout="changeImages('links_btn', 'links_btn')"><img class="imgplain" id="links_btn" src="/images/links-btn.jpg" alt="Links" title="Links"></a> 
 <a href="/index.php?index=circuit" onmouseover="changeImages('circuits_btn', 'circuits_btn_over')" onmouseout="changeImages('circuits_btn', 'circuits_btn')"> <img class="imgplain" id="circuits_btn" src="/images/circuits-btn.jpg" alt="Circuits" title="Circuits"></a>
 <a href="/index.php?index=document" onmouseover="changeImages('documents_btn', 'documents_btn_over')" onmouseout="changeImages('documents_btn', 'documents_btn')"> <img class="imgplain" id="documents_btn" src="/images/documents-btn.jpg" alt="Documents" title="Documents"></a> 
-<a href="/index.php?index=discussion" onmouseover="changeImages('forum_btn', 'forum_btn_over')" onmouseout="changeImages('forum_btn', 'forum_btn')"> <img class="imgplain" id="forum_btn" src="/images/forum-btn.jpg" alt="Forum" title="Forum"></a> 
+<a href="/phpBB3/index.php" onmouseover="changeImages('forum_btn', 'forum_btn_over')" onmouseout="changeImages('forum_btn', 'forum_btn')"> <img class="imgplain" id="forum_btn" src="/images/forum-btn.jpg" alt="Forum" title="Forum"></a> 
 <a href="/software-list.php" onmouseover="changeImages('software_btn', 'software_btn_over')" onmouseout="changeImages('software_btn', 'software_btn')"> <img class="imgplain" id="software_btn" src="/images/software-btn.jpg" alt="Software" title="Software"></a> 
+<a href="http://www.epanorama.net/blog" onmouseover="changeImages('blog_btn', 'blog_btn_over')" onmouseout="changeImages('blog_btn', 'blog_btn')"><img class="imgplain" id="blog_btn" src="/images/blog_btn.jpg" alt="Blog" title="Blog"></a>
 <a href="/RFC/rfc_index.html" onmouseover="changeImages('rfc_btn', 'rfc_btn_over')" onmouseout="changeImages('rfc_btn', 'rfc_btn')"> <img class="imgplain" id="rfc_btn" src="/images/rfc-btn.jpg" alt="RFC" title="RFC"></a> 
 <a href="/index.php?index=calculator" onmouseover="changeImages('toolbox_btn', 'toolbox_btn_over');" onmouseout="changeImages('toolbox_btn', 'toolbox_btn');"> <img class="imgplain" id="toolbox_btn" src="/images/toolbox-btn.jpg" alt="ToolBox" title="ToolBox"></a>
 <a href="/multi.php" onmouseover="changeImages('search_btn', 'search_btn_over')" onmouseout="changeImages('search_btn', 'search_btn')"> <img class="imgplain" id="search_btn" src="/images/search-btn.jpg" alt="Search" title="Search"></a> </div>
@@ -98,7 +94,7 @@ google_color_border = "336699";
  <a href="/index.php" class="btext">Index</a> | 
  <a href="/schematicsforfree/index.php" class="btext">Schematics</a> | 
  <a href="/acronym.html" class="btext">Acronyms</a> | 
- <a href="/wwwboard/wwwboard.html" class="btext">Discussion</a> | 
+ <a href="/phpBB3/index.php" class="btext">Discussion</a> | 
  <a href="/m2f/friendmail.php" class="btext">Mail to a friend</a> | 
  <a href="/pagediscuss.php" class="btext">Post a message</a> |
  </div>
@@ -115,29 +111,38 @@ google_color_border = "336699";
 	   <!-- News content here -->
         <div class="div2" style="height: 350px;">
 		
-<br><br>
-<span class="bluelink">December 11: More pinout information at <a href="http://www.epanorama.net/cgi-bin/semi.cgi">semiconductor information search</a>.
-</span>
+<b>Year 2009</b>
+
 
 <br><br>
-<span class="bluelink">November 15: Links update. Hundreds of links updated.
-</span>
-
-<br><br>
-<span class="bluelink">November 11: Links update
-</span>
-
-<br><br>
-<span class="bluelink">August 13:
-New user circuit added: <a href="http://www.epanorama.net/usercircuits/alarm1/">car alarm remake</a> 
+<span class="bluelink">April 16: <a href="http://www.epanorama.net/blog/">Tomi Engdahl's new Blog!</a> - Follow the thoughts and get
+the latest circuit tricks!
 </span>
 
 
 <br><br>
-<span class="bluelink">June 16:
-New <b>user cicuits area</b> opened for user submitted circuits. 
-Check the first <a href="http://www.epanorama.net/usercircuits/dimmer1/">light dimmer circuit</a> 
+<span class="bluelink">April 2: <a href="http://www.epanorama.net/notes/">Usenet post list</a> by Tomi Engdahl. Lot of usefull stuff collected by Tomi during last years.
 </span>
+
+<br><br>
+<span class="bluelink">March 18: <a href="http://www.epanorama.net/circuits/led_dimmer.html">Simple LED dimmer circuits</a> web page added.
+</span>
+
+<br><br>
+<span class="bluelink">March 12: New main index launched! Now it's easier to
+browse ePanorama.net. Old index available <a href="/index.php?index=link_old">here</a>
+</span>
+
+<br><br>
+<span class="bluelink">March 2: Simple linux parallel port controlling GUI example added to <a href="http://www.epanorama.net/circuits/parallel_output.html">Parallel port interfacing made easy</a> document.
+</span>
+
+<br><br>
+<span class="bluelink">January 5: New links added to <a href="http://www.epanorama.net/circuits/parallel_output.html">Parallel port interfacing made easy</a> document Windows programming section.
+</span>
+
+<br><br>
+
 
         </div>
 		<!-- News content ends here -->
@@ -149,14 +154,20 @@ Check the first <a href="http://www.epanorama.net/usercircuits/dimmer1/">light d
 <!-- Search window section begins -->	
   <div><img class="newsimg" src="images/topside.jpg" alt=""></div>
     <div class="leftTitles"> &nbsp;<img src="images/search.jpg" border="0px"> 
-	  <form action="multi.php" method="post" name="searchfrm" style="display:inline">
-		<br> &nbsp;<input name="keyword" size="25" type="text"> &nbsp;
-		<a href="javascript:document.searchfrm.submit();"><img src="images/ok_btn.gif" alt="" border="0" height="18" width="26"></a>
-		<input name="search" value="search" type="hidden">
-		</form>	
+	<form action="multi.php" method="post" name="searchfrm" style="display:inline">
+		<br> &nbsp;<input type="text" name="q" size="25"><!-- input name="keyword" size="25" type="text"--> &nbsp;
+		<!-- a href="javascript:document.searchfrm.submit();"><img src="images/ok_btn.gif" alt="" border="0" height="18" width="26"></a -->
+		<input type="submit" name="sa" value="Search">
+		<!-- input name="search" value="search" type="hidden" -->
+		<input type="hidden" name="cx" value="partner-pub-3257650267345122:m8l15-vldxh">
+		<input type="hidden" name="cof" value="FORID:10">
+		<input type="hidden" name="ie" value="ISO-8859-1">		
+	</form>	
+	<script type="text/javascript" src="http://www.google.com/coop/cse/brand?form=cse-search-box&amp;lang=en"></script>
     <div><img class="newsimg" src="images/bottomside.jpg" alt=""></div>	  
     </div>
 <!-- Search window section ends here -->
+
 <!-- Tell a friend section begins here -->
 <!-- <form name="tellafriend" method="post" action="" >   	
     <div><img class="newsimg" src="images/topside.jpg" alt=""></div>
@@ -178,7 +189,7 @@ Check the first <a href="http://www.epanorama.net/usercircuits/dimmer1/">light d
         <div class="div2">
         <!-- Hotlinks content here-->
 		<p><span class="bluelink">
-			</span></p><li><a href="http://www.epanorama.net/schematicsforfree/pdf_redirect.php?url=http://www.epanorama.rackhost.net/schematicsforfree/Power%20Electronics/Inverters/Inverter_-_Negative_Voltage_Supply_with_555.PDF">Negative Voltage Supply with 555</a>
+			</span></p><li><a href="http://www.epanorama.net/schematicsforfree/pdf_redirect.php?url=http://www.epanorama.rackhost.net/schematicsforfree/Power%20Electronics/Power_Factor_Correction/PowerFactor_Correction.pdf">Power Factor Correction</a>
 		<p></p>
         </li></div>
       </center>
@@ -187,6 +198,24 @@ Check the first <a href="http://www.epanorama.net/usercircuits/dimmer1/">light d
 <!-- Hotlinks section ends  -->	
 
     <div class="divspacer"><!-- Spacer  --></div>
+    <div class="divspacer"><!-- Spacer  --></div>
+    <div class="divspacer"><!-- Spacer  --></div>
+
+<!-- Google adsense small square -->    
+<div class="leftAd">
+	<script type="text/javascript"><!--
+	google_ad_client = "pub-3257650267345122";
+	/* 200x200, created 4/2/09 */
+	google_ad_slot = "2935269341";
+	google_ad_width = 200;
+	google_ad_height = 200;
+	//-->
+	</script>
+	<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+	</script>
+</div>
+
+<div class="divspacer"><!-- Spacer  --></div>
 
 	<!-- Google Ad. section begins -->
   </div>
@@ -255,7 +284,7 @@ google_color_border = "336699";
   <center>
 
     <div style="padding-left:25px; width:730px;">| <a href="submitSite.php" class="btext">Submit site</a> | <a href="/index.php?index=info" class="btext">Info</a> | <a href="/index.php?index=advertising" class="btext">Advertise</a> | <a href="mailto:webmaster@epanorama.net?subject=Feedback" class="btext">Feedback</a> | <a href="/index.php?index=disclaimer" class="btext">Disclaimer</a> | <a href="/index.php?index=privacy" class="btext">Privacy</a> | <a href="/index.php?index=ad_faq" class="btext">Ad. FAQ</a> | <a href="/index.php?index=terms" class="btext">Legal Notice</a> |</div>
-    <div style="padding-left:25px; width:730px;" class="btext">Copyright © 1994-2007</div> <!-- Copyright Section -->
+    <div style="padding-left:25px; width:730px;" class="btext">Copyright © 1994-2009</div> <!-- Copyright Section -->
   </center>
 </div>
 <div>&nbsp;</div>
@@ -263,6 +292,15 @@ google_color_border = "336699";
 <!-- Footer section ends here -->
 
 </div>
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
+<script type="text/javascript">
+try {
+var pageTracker = _gat._getTracker("UA-272685-1");
+pageTracker._trackPageview();
+} catch(err) {}</script>
 
 
 
