wyse.com (archived on 2009-06-16)
{
  "alexa_rank": 236147,
  "analysis_subcorpus": true,
  "categories": "business;informationtech;shopping",
  "char_count": 1040,
  "classifier_probability": 0.79,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.49,
  "homepage_snapshot_redirected_domain": "wyse.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090402112227id_/http://www.wyse.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090402112227id_/http%3A//wyse.com",
  "interval": "2009_A",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "wyse.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090616153016id_/http%3A//www.wyse.com/about/privacy.asp",
  "policy_title": "Wyse Technology - About Wyse",
  "policy_url": "wyse.com/about/privacy.asp",
  "sha1": "e2a3421a5cdc6c609ae324caa80a0625bfc66799",
  "simhash": 11792677763247494834,
  "simhash_updated": false,
  "site_hostname": "wyse.com",
  "site_url": "http://wyse.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20090616153016",
  "word_count": 168,
  "year": 2009
}

--- a/w/wy/wys/wyse.com.html
+++ b/w/wy/wys/wyse.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the wyse.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216065622id_/http%3A//www.wyse.com/about/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the wyse.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616153016id_/http%3A//www.wyse.com/about/privacy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html lang="en"><head>
 <!-- Header info start -->
@@ -201,12 +201,15 @@ If you have any questions concerning the privacy policies of wyse.com which are 
 <a href="../thincomputing/">Thin Computing</a> | <a href="../solutions/education/">Solutions</a> | <a href="../products/">Products &amp; Services</a> | <a href="../digitalinclusion/">Digital Inclusion</a> | <a href="../serviceandsupport/">Support</a> | <a href="../partners/">Partners</a> | <a href=".">About Wyse</a><br>
 </td></tr>
 </tbody></table>
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
-</script>
 <script type="text/javascript">
-_uacct = "UA-390901-1";
-urchinTracker();
-</script>
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
+<script type="text/javascript">
+try {
+var pageTracker = _gat._getTracker("UA-390901-1");
+pageTracker._trackPageview();
+} catch(err) {}</script>
 
 <!-- Footer section end -->
 </div>
