--- a/p/pl/pla/planetrecruit.com.html
+++ b/p/pl/pla/planetrecruit.com.html
@@ -1,8 +1,9 @@
-<!--The following is the downloaded HTML source of the planetrecruit.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216012125id_/http%3A//www.planetrecruit.com/static.cgi%3Fm%3Dprivacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the planetrecruit.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616153055id_/http%3A//www.planetrecruit.com/static.cgi%3Fm%3Dprivacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7">
 <title>IT jobs, Telecom jobs and Engineering jobs in London &amp; the UK - PlanetRecruit</title>
 <link rel="shortcut icon" href="http://www.planetrecruit.com/img/favicon.ico" type="image/x-icon">
 <link rel="icon" href="http://www.planetrecruit.com/img/favicon.ico" type="image/x-icon">
@@ -29,7 +30,6 @@
 <!--[if lte IE 5]>
 <link rel="stylesheet" media="all" type="text/css" href="/ie5.css">
 <![endif]-->
-<link href="/print.css" rel="stylesheet" type="text/css" media="print">
 <link href="http://www.jobsin.co.uk/templates/sifr/common/sIFR-screen.css" rel="stylesheet" type="text/css" media="screen">
 <link href="http://www.jobsin.co.uk/templates/sifr/common/sIFR-print.css" rel="stylesheet" type="text/css" media="print"><!-- TEMPLATE END : common_header.thtml -->
 
@@ -49,6 +49,8 @@ var base_root="http://www.jobsin.co.uk"
 
 
 
+
+
 <script type="text/javascript" language="JavaScript">
  <!-- Begin
 function formHandler(){
@@ -59,71 +61,32 @@ var URL = document.menuform.site.options[document.menuform.site.selectedIndex].v
        }
 </script> 
 
+<!-- START OF SmartSource Data Collector TAG -->
+<!-- Copyright (c) 1996-2009 WebTrends Inc.  All rights reserved. -->
+<!-- Version: 8.6.2 -->
+<!-- Tag Builder Version: 3.0  -->
+<!-- Created: 5/13/2009 9:29:18 AM -->
+<script src="/webtrends.js" type="text/javascript"></script>
 <script type="text/javascript">
-// disable search bar state detection
-function detectSearchState() {
-	return false;
-	}
-</script>
 
+//<![CDATA[
+var _tag=new WebTrends();
+_tag.dcsid="dcswp2639100004fy3zj8u62j_7x9p";
+_tag.fpcdom=".planetrecruit.com";
+_tag.onsitedoms="www.planetrecruit.com";
+_tag.dcsGetId();
+//]]>>
+
+</script>
 <script type="text/javascript">
-// cookie code courtesy of Peter-Paul Koch, www.quirksmode.org
-function createCookie(name,value,days) {
-	if (days) {
-		var date = new Date();
-		date.setTime(date.getTime()+(days*24*60*60*1000));
-		var expires = "; expires="+date.toGMTString();
-	}
-	else var expires = "";
-	document.cookie = name+"="+value+expires+"; path=/";
-}
-function readCookie(name) {
-	var nameEQ = name + "=";
-	var ca = document.cookie.split(';');
-	for(var i=0;i < ca.length;i++) {
-		var c = ca[i];
-		while (c.charAt(0)==' ') c = c.substring(1,c.length);
-		if (c.indexOf(nameEQ) == 0) return c.substring(nameEQ.length,c.length);
-	}
-	return null;
-}
-function eraseCookie(name) {
-	createCookie(name,"",-1);
-}
+_tag.dcsCollect();
+//]]>>
 </script>
+<noscript>
+<div><img alt="DCSIMG" id="DCSIMG" width="1" height="1" src="http://statse.webtrendslive.com/dcswp2639100004fy3zj8u62j_7x9p/njs.gif?dcsuri=/nojavascript&amp;WT.js=No&amp;WT.tv=8.6.2"/></div>
+</noscript>
+<!-- END OF SmartSource Data Collector TAG -->
 
-<script>
-function initLatestJobs() {
-	x = readCookie('latestjobs');
-	if (x) {
-		term=readCookie('latestjobs');
-		if (term==0) {
-			chooseLatestJobs(0)
-			}
-		else {
-			chooseLatestJobs(1)
-			};
-		}
-	else {
-		chooseLatestJobs(Math.round(Math.random()));
-		}
-	}
-function chooseLatestJobs(term) {
-	if (term==0) {
-		$('latestContractJobs').style.display = 'block';
-		$('latestPermanentJobs').style.display = 'none';
-		$('latestContractJobsTab').addClassName('selected');
-		$('latestPermanentJobsTab').removeClassName('selected');
-		}
-	else {
-		$('latestContractJobs').style.display = 'none';
-		$('latestPermanentJobs').style.display = 'block';
-		$('latestContractJobsTab').removeClassName('selected');
-		$('latestPermanentJobsTab').addClassName('selected');
-		}
-	createCookie('latestjobs',term,7);
-	}
-</script>
 
 </head>
 
@@ -140,44 +103,34 @@ allAdTags = "/AAMALL/acc_random=" + aamRnd + "/pageid=" + aamRnd;
 // Individual tags for each ad request - increment the adx variable name and the AAMBx parameter.
 // bserver ad call â€“ insert the adx variables
 document.write('<SCR' + 'IPT SRC="' + adserver + allAdTags +
-"/AAMB1/SITE=planetrecruit/AAMSZ=BANNER/AREA=TARGETBANNER/="
+"/AAMB1/SITE=planetrecruit/AREA=RUNOFSITE"
 + '?" type="text/JavaScript" language="JavaScript">');
 document.write('</SCR' + 'IPT>');
 
 // End Hide -->
-</script><script src="http://hot.adbureau.net/bservers/AAMALL/acc_random=46564108/pageid=46564108/AAMB1/SITE=planetrecruit/AAMSZ=BANNER/AREA=TARGETBANNER/=?" type="text/JavaScript" language="JavaScript"></script>
+</script><script src="http://hot.adbureau.net/bservers/AAMALL/acc_random=52145280/pageid=52145280/AAMB1/SITE=planetrecruit/AREA=RUNOFSITE?" type="text/JavaScript" language="JavaScript"></script>
 
 
 <!-- wrapper -->
 <div id="wrapper">
 
 <!-- Skip links -->
-    <div id="skip_links">
-        <ul>
-            <li><a href="/static_generic.cgi?a=pr_accessibility" title="Skip to accessibility information page [accesskey:0]" accesskey="0">Skip to accessibility information page [Accesskey '0']</a></li>
-            <li><a href="/" title="Skip to PlanetRecruit home page [accesskey:1]" accesskey="1">Skip to to PlanetRecruit home page [Accesskey '1']</a></li>
-            <li><a href="#content" title="Skip to main content [accesskey:2]" accesskey="2">Skip to main content [Accesskey '2']</a></li>
-            <li><a href="/static_generic.cgi?a=sitemap" title="Skip to site map [accesskey:3]" accesskey="3">Skip to site map [Accesskey '3']</a></li>
-            <li><a href="/search_form.cgi" title="Skip to search page [accesskey:4]" accesskey="4">Skip to search page [Accesskey '4']</a></li>
-            <li><a href="/static_generic.cgi?a=pr_help_searching" title="Skip to frequently asked questions page [Accesskey '5']" accesskey="5">Skip to frequently asked questions page [Accesskey '5']</a></li>
-            <li><a href="/static.cgi?m=privacy" title="Skip to privacy page [accesskey:6]" accesskey="6">Skip to privacy page [Accesskey '6']</a></li>
-            <li><a href="/static_generic.cgi?a=termsconditions_jobseekers" title="Skip to PlanetRecruit terms and conditions page [Accesskey '7']" accesskey="7">Skip to PlanetRecruit terms and conditions page [Accesskey '7']</a></li>
-            <li><a href="/static_generic.cgi?a=pr_help_contactusform" title="Skip to contact us page [accesskey:8]" accesskey="8">Skip to contact us page [Accesskey '8']</a></li>
-        </ul>
-    </div>
+  <div id="skip_links">
+		<a href="#content" accesskey="2">Skip to main content</a>
+  </div>
 
 <!-- Branding -->
     <div id="branding">
-    <h1 id="site_logo" class="ir"><a href="/" title="PlanetRecruit" accesskey="1"><img src="/img/logo_print.gif" border="0" alt="PlanetRecruit">&nbsp;PlanetRecruit</a></h1>
-        <div id="advertising">	<!-- START Advert Tag -->
+    <h1 id="site_logo" class="ir"><a href="/" title="PlanetRecruit"><img src="/img/logo_print.gif" border="0" alt="PlanetRecruit">&nbsp;PlanetRecruit</a></h1>
+      <div id="advertising">	<!-- START Advert Tag -->
 	<script type="text/javascript" language="javascript">
 	<!-- 
 		document.writeln(AAMB1);
 	// -->
 	</script>
 	<noscript>
-			<a rel="nofollow" href="http://hot.adbureau.net/adclick/SITE=planetrecruit/AAMSZ=BANNER/AREA=TARGETBANNER/=">
-		<img src="http://hot.adbureau.net/iserver/SITE=planetrecruit/AAMSZ=BANNER/AREA=TARGETBANNER/="  alt="Advertisement" /></a>
+		<a rel="nofollow" href="http://hot.adbureau.net/adclick/SITE=planetrecruit/AAMSZ=BANNER/AREA=RUNOFSITE/KEYWORD=">
+	<img src="http://hot.adbureau.net/iserver/SITE=planetrecruit/AAMSZ=BANNER/AREA=RUNOFSITE/KEYWORD="  alt="Advertisement" /></a>
 
 	</noscript>
 	<!-- END Advert Tag -->
@@ -188,25 +141,26 @@ document.write('</SCR' + 'IPT>');
         <div id="nav_main">
                         <h2>Candidate Navigation</h2>
             <ul id="nav_cand">
-                    <li><a href="/" title="Home">Home</a></li>
-                    <li><a href="/search_form.cgi" title="Search jobs">Search</a></li>
-                    <li><a href="/list_alerts.cgi" title="My alerts">My Alerts</a></li>
-                    <li><a href="/jobfile.cgi?m=managed" title="My profile">My Profile</a></li>
-                    <li><a href="jobfile.cgi?m=myjobs" title="My jobs">My Jobs</a></li>
-                    <li><a href="/static_generic.cgi?a=pr_help_searching" title="Help">Help &amp; FAQs</a></li>
-                    <li><a href="http://www.planetrecruithomestudy.com" title="Training">Training</a></li>
-                    <li><a href="/login.cgi" title="Log in to your account">Log in</a></li>
+                    <li id="navHome"><a href="/" title="Go back to home page" accesskey="1">Home</a></li>
+                    <li id="navSearch"><a href="/search_form.cgi" title="Search for jobs" accesskey="4">Search</a></li>
+                    <li id="navAlerts"><a href="/list_alerts.cgi" title="View or edit your job alerts">My Alerts</a></li>
+                    <li id="navProfile"><a href="/jobfile.cgi?m=managed" title="View or edit your CV and profile">My Profile</a></li>
+                    <li id="navJobs"><a href="jobfile.cgi?m=myjobs" title="View jobs you've saved or applied for">My Jobs</a></li>
+                    <li id="navHelp"><a href="/static_generic.cgi?a=pr_help_searching" accesskey="5" title="Help and frequently asked questions">Help &amp; FAQs</a></li>
+                    <li id="navTraining"><a href="http://www.planetrecruithomestudy.com" title="Training from Home Learning College">Training</a></li>
+										<li id="navCareerAdvice"><a href="http://www.workthing.com/career-advice/" title="Career tools, resources and community from Workthing+">Career Advice</a></li>
+                    <li id="navLogInOut" class="navLogIn"><a href="/login.cgi" title="Log into your account">Log in</a></li>
             </ul>
 
                         <h2>Recruiter Navigation</h2>
             <ul id="nav_rec">
-            <li>RECRUITERS
-<a href="http://recruiter.planetrecruit.com/" title="Recruiters login" target="_blank"> Login</a> or <a href="http://www.hotonline.com/" title="Find out more about recruitment" target="_blank">Find out more</a>
+            <li>Recruiters:
+<a href="http://recruiter.planetrecruit.com/" title="Recruiters log in" target="_blank"> Log in</a> or <a href="http://www.tmdr.com/" title="Find out more about recruitment" target="_blank">Find out more</a>
             </li>
+						<li id="telephone">0845 468 0568</li>
             </ul>
 
         </div>
-
 <!-- TEMPLATE END : pr_head.thtml --><div id="contentWrapper" class="help privacy">
   <div id="subNav">
     <!-- borders 1/2 -->
@@ -274,21 +228,26 @@ document.write('</SCR' + 'IPT>');
 </div></div> <!-- wrapper-->
 <div id="footer_wrapper">
     <div id="footer">
-          <p>© 2008 hotonline Ltd.</p>
-              <ul>
-                    <li><a href="/static_generic.cgi?a=termsconditions_jobseekers" title="Terms and conditions">Terms &amp; conditions</a></li>
-                    <li><a href="/static.cgi?m=privacy" title="Privacy policy">Privacy Policy</a></li>
-                    <li><a href="/static_generic.cgi?a=pr_help_contactusform" title="Contact us">Contact us</a></li>
-                    <li><a href="/static_generic.cgi?a=pr_accessibility" title="Accessibility information">Accessibility</a></li>
-                    <li><a rel="nofollow" href="/static_generic.cgi?a=sitemap" title="Site map">Site map</a></li>
+          <p>© 2009 Trinity Mirror Digital Recruitment Ltd.</p>
+              <ul id="footerNav">
+                    <li><a href="/static_generic.cgi?a=termsconditions_jobseekers" accesskey="7">Terms &amp; conditions</a></li>
+                    <li><a href="/static.cgi?m=privacy" accesskey="6">Privacy Policy</a></li>
+                    <li><a href="/static_generic.cgi?a=pr_help_contactusform" accesskey="8">Contact us</a></li>
+                    <li><a href="/static_generic.cgi?a=pr_accessibility" accesskey="0">Accessibility</a></li>
+                    <li><a rel="nofollow" href="/static_generic.cgi?a=sitemap" accesskey="3">Site map</a></li>
                     <li><a href="/search_seo.cgi" title="Search engines">Search engines</a></li>
-                    <li id="noBorder"><a href="/static_generic.cgi?a=pr_workforus" title="Work for us">Work for us</a></li>
+                    <li><a href="/static_generic.cgi?a=pr_aboutus" title="Learn about TMDR">About us</a></li>
 
               </ul>
+              <ul id="social">
+              	<li id="su"><a class="ir" href="http://www.stumbleupon.com/submit?url=http://www.planetrecruit.com/&amp;title=PlanetRecruit" title="Recommend PlanetRecruit with StumbleUpon">StumbleUpon</a></li>
+                <li id="reddit"><a class="ir" href="http://reddit.com/submit?url=http://www.planetrecruit.com/&amp;title=PlanetRecruit" title="Recommend PlanetRecruit with Reddit">Reddit</a></li>
+                <li id="digg"><a class="ir" href="http://digg.com/submit?url=http://www.planetrecruit.com/&amp;title=PlanetRecruit" title="Recommend PlanetRecruit with Digg">Digg</a></li>
+                <li id="delicious"><a class="ir" href="http://del.icio.us/post?url=http://www.planetrecruit.com/&amp;title=PlanetRecruit" title="Recommend PlanetRecruit with del.icio.us">del.icio.us</a></li>
+              </ul>
+              <div id="backToTop"><a href="#wrapper">Back to top</a></div>    
         </div>
-	<div id="backToTop">
-  	<a href="#wrapper">Back to top</a>
-  </div>     
+ 
    
 </div>
 
@@ -324,8 +283,6 @@ hbx.lt="auto";
 <img alt="" src="http://ehg-hotgroup.hitbox.com/HG?hc=&amp;hb=DM550331LJRV%3BDM550411KPBS&amp;cd=1&amp;hv=6&amp;n=;&amp;con=&amp;vcon=;&amp;tt=none&amp;ja=y&amp;dt=9&amp;zo=-60&amp;lm=1126771961000&amp;ce=y&amp;ss=1024*768&amp;sc=32&amp;sv=13&amp;cy=modem&amp;hp=n&amp;ln=en-gb&amp;vpc=HBX0100u&amp;vjs=HBX0132.01u">
 </noscript>
 <!--END WEBSIDESTORY CODE-->
-
-
 
 
 
