ratesupermarket.ca (archived on 2009-06-16)
{
  "alexa_rank": 513698,
  "analysis_subcorpus": true,
  "categories": "business;economyandfinance",
  "char_count": 5978,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.48,
  "homepage_snapshot_redirected_domain": "ratesupermarket.ca",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090326150056id_/http://ratesupermarket.ca/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090326150056id_/http%3A//ratesupermarket.ca",
  "interval": "2009_A",
  "link_text": "Privacy policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "ratesupermarket.ca",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090616153840id_/http%3A//www.ratesupermarket.ca/privacy_policy",
  "policy_title": "Ratesupermarket.ca Privacy Policy",
  "policy_url": "ratesupermarket.ca/privacy_policy",
  "sha1": "85e8d5f57778e902ae4309047820e87aca8be028",
  "simhash": 10516393756566358030,
  "simhash_updated": false,
  "site_hostname": "ratesupermarket.ca",
  "site_url": "http://ratesupermarket.ca",
  "smog": 15.86,
  "strict_updated": false,
  "timestamp": "20090616153840",
  "word_count": 938,
  "year": 2009
}

--- a/r/ra/rat/ratesupermarket.ca.html
+++ b/r/ra/rat/ratesupermarket.ca.html
@@ -1,61 +1,65 @@
-<!--The following is the downloaded HTML source of the ratesupermarket.ca privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216061119id_/http%3A//www.ratesupermarket.ca/mortgage/privacy_policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ratesupermarket.ca privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616153840id_/http%3A//www.ratesupermarket.ca/privacy_policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
-<title>Ratesupermarket.ca Privacy Policy - Mortgage Rates Canada - Compare Mortgage Rates</title>
+<title>Ratesupermarket.ca Privacy Policy</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="verify-v1" content="cnbKL+f8ES/IjARSNAeRW5krg1GLeSotHFMYM6e7j94=">
 <meta name="verify-v1" content="RfxBOTEVq7vVfq6JGGePrR35lz7wsuhXze38wYGi5ns=">
-<meta name="title" content="Ratesupermarket.ca Privacy Policy - Mortgage Rates Canada - Compare Mortgage Rates">
+<meta name="y_key" content="e8784c7108cc5dac"> 
+<meta name="slurp" content="noydir">
+<meta name="verify-v1" content="RfxBOTEVq7vVfq6JGGePrR35lz7wsuhXze38wYGi5ns=">
+<meta name="title" content="Ratesupermarket.ca Privacy Policy">
 <meta name="description" content="Ratesupermarket.ca Policy">
 <meta name="keywords" content="mortgage rate, mortgage interest rate, best mortgage rate, mortgage rate canada, current mortgage rate, mortgage rate calculator, mortgage guide, mortgage rate help, privacy policy">
 <meta name="robots" content="follow,index">
-<meta name="y_key" content="e8784c7108cc5dac"> 
-<meta name="verify-v1" content="RfxBOTEVq7vVfq6JGGePrR35lz7wsuhXze38wYGi5ns=">
 <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 <link href="http://www.ratesupermarket.ca/modules/common/index.css" rel="stylesheet" type="text/css" media="all">
 <!--[if lte IE 6]>
-<link href="http://www.ratesupermarket.ca/modules/common/index_ie6.css" rel="stylesheet" type="text/css" media ="all">
+<link href="http://www.ratesupermarket.ca/modules/common/index_ie6.css" rel="stylesheet" type="text/css" media ="all" />
 <![endif]-->
 <!--[if gte IE 7]>
-<link href="http://www.ratesupermarket.ca/modules/common/index_ie7.css" rel="stylesheet" type="text/css" media ="all">
+<link href="http://www.ratesupermarket.ca/modules/common/index_ie7.css" rel="stylesheet" type="text/css" media ="all"/>
 <![endif]-->
 <link rel="stylesheet" href="http://www.ratesupermarket.ca/connect-me-now/lib/thickBox/thickbox.css" type="text/css" media="screen">
 <script type="text/javascript" src="http://www.ratesupermarket.ca/connect-me-now/lib/thickBox/jquery-latest.js"></script> 
 <script type="text/javascript" src="http://www.ratesupermarket.ca/connect-me-now/lib/thickBox/thickbox.js"></script>
-<script language="JavaScript" src="http://www.ratesupermarket.ca/javascript/utils.js"></script>
-<script language="JavaScript" src="http://www.ratesupermarket.ca/javascript/tab.js"></script>
-<script language="JavaScript" src="http://www.ratesupermarket.ca/javascript/tab_test.js"></script>
-<script language="JavaScript" src="http://www.ratesupermarket.ca/javascript/tab_best.js"></script>
-<script language="JavaScript" src="http://www.ratesupermarket.ca/javascript/favourite.js"></script>
-<script language="JavaScript" src="http://www.ratesupermarket.ca/javascript/toggle.js"></script>
-<script type="text/javascript">var WRInitTime=(new Date()).getTime();</script>
+<script type="text/javascript" language="JavaScript" src="http://www.ratesupermarket.ca/javascript/utils.js"></script>
+<script type="text/javascript" language="JavaScript" src="http://www.ratesupermarket.ca/javascript/tab.js"></script>
+<script type="text/javascript" language="JavaScript" src="http://www.ratesupermarket.ca/javascript/tab_test.js"></script>
+<script type="text/javascript" language="JavaScript" src="http://www.ratesupermarket.ca/javascript/tab_best.js"></script>
+<script type="text/javascript" language="JavaScript" src="http://www.ratesupermarket.ca/javascript/favourite.js"></script>
+<script type="text/javascript">
+var WRInitTime=(new Date()).getTime();
+</script>
 <!--?php
 include_once "http://www.ratesupermarket.ca/poll/poll_cookie.php";
 ?-->
 </head>
-<body>
+<body ondragstart="return 
+false" onselectstart="return false" oncontextmenu="return false">
 <div id="container"> 
-	<div id="header"><a href="http://www.RateSupermarket.ca">
-	<img src="/modules/common/images/logos/logo_ratesupermarket.jpg" alt="RateSupermarket.ca - Canada's best mortgage rate comparison site"></a> 
-	    <h1>Compare mortgage rates. Save money.</h1>
+	<div id="header"><img src="/modules/common/images/logos/logo_ratesupermarket.jpg" alt="RateSupermarket.ca - Canada's best mortgage rate comparison site">
+	 
+	<img src="http://www.ratesupermarket.ca/modules/common/images/banners/RSM_header_callcenter.jpg" class="call_center">
 	</div>
 	<div id="navigation"> 
 	  <ul>
-	      	      	<li><a href="http://www.ratesupermarket.ca">Mortgages<br>home</a></li>
-	      	      <li><a href="http://www.ratesupermarket.ca/mortgage/rate_calculator">Mortgage<br>rate calculator</a></li>
-	      <li> <a href="http://www.ratesupermarket.ca/mortgage/compare/rates">Compare mortgage<br>rates in Canada</a></li>
-	      <li><a href="http://www.ratesupermarket.ca/mortgage/guide">Mortgage<br>guide </a></li>
-	      <li><a href="http://www.ratesupermarket.ca/best_mortgage_rates">Best mortgage <br>rates</a></li>
-	      <li><a href="http://www.ratesupermarket.ca/mortgage/find_mortgage_lenders_brokers">Mortgage
-	      lender or <br> broker search</a></li>
-		    <li class="app"><a href="http://www.ratesupermarket.ca/online_mortgage_application">Apply <br> online&nbsp;</a></li>
+	      	      	<li><a href="http://www.ratesupermarket.ca"><p>Home</p></a></li>
+	      <li> <a href="http://www.ratesupermarket.ca/mortgage/compare/rates/">Compare <br>mortgage rates</a></li>
+<li><a href="http://www.ratesupermarket.ca/best_mortgage_rates/">Best<br> mortgage rates</a></li>		 <li class="app"><a href="http://www.ratesupermarket.ca/term_life_insurance/">Compare <br> life insurance</a></li>
+<li class="app"><a href="http://www.ratesupermarket.ca/credit_cards/">Compare <br> credit cards</a></li>
+<li><a href="http://www.ratesupermarket.ca/online_applications/">Apply <br> online&nbsp;&nbsp;</a></li>
+<li><a href="http://www.ratesupermarket.ca/articles/"><p>Articles</p></a></li>
+ 
+ <li class="app"><a href="http://forums.ratesupermarket.ca/">Forums - <br> Ask an expert</a></li>
 		    </ul>
 	</div>
+
 <div id="nav_search"> 
-<p><a href="http://www.ratesupermarket.ca/search/search.php" class="link" title="RateSupermarket.ca search">Search</a>   
-<a href="http://www.ratesupermarket.ca/mortgage/help" class="link" title="RateSupermarket.ca help">Help</a>   
-<a href="http://www.ratesupermarket.ca/admin/login" class="link" title="RateSupermarket.ca account login">Login</a>   
+<p><a href="http://www.ratesupermarket.ca/search/search.php" class="link" title="RateSupermarket.ca search" rel="nofollow">Search</a>   
+<a href="http://www.ratesupermarket.ca/mortgage/help/" class="link" title="RateSupermarket.ca help" rel="nofollow">Help</a>   
+<a href="http://www.ratesupermarket.ca/admin/login/" class="link" title="RateSupermarket.ca account login" rel="nofollow">Login</a>   
 </p>
 </div>
  	<div id="sub_nav">
@@ -165,97 +169,33 @@ include_once "http://www.ratesupermarket.ca/poll/poll_cookie.php";
 Burlington, Ontario, Canada<br>
 L7M 3A4<br>
 kelvin@RateSupermarket.ca
-  </p></div> <div id="footer_nav">
-   <p class="small_footer"> Compare the <a href="http://www.ratesupermarket.ca/mortgage/compare/rates" class="link">best mortgage rates</a>  on RateSupermarket.ca: </p>
-
-<div id="footer_box">
-
-  <p class="small">By province:</p>
- <p class="small">  <a href="http://www.ratesupermarket.ca/best_mortgage_rates?province=Canada" class="link">Canada (CA)</a></p>
-<p class="small"> <a href="http://www.ratesupermarket.ca/best_mortgage_rates?province=Alberta" class="link">Alberta (AB)</a></p>
-<p class="small">   <a href="http://www.ratesupermarket.ca/best_mortgage_rates?province=British-Columbia" class="link">British Columbia (BC)</a></p>   
-<p class="small">   <a href="http://www.ratesupermarket.ca/best_mortgage_rates?province=Manitoba" class="link">Manitoba (MB)</a></p>   
-</div>  <div class="footer_box">
-<p class="small">  <a href="http://www.ratesupermarket.ca/best_mortgage_rates?province=New-Brunswick" class="link">New Brunswick (NB)</a></p>
-<p class="small"><a href="http://www.ratesupermarket.ca/best_mortgage_rates?province=Newfoundland-Labrador" class="link"> Newfoundland (NFLD)</a></p>
-<p class="small">    <a href="http://www.ratesupermarket.ca/best_mortgage_rates?province=Northwest-Territories" class="link"> Nortwest Territories (NWT)</a></p>   
-<p class="small">   <a href="http://www.ratesupermarket.ca/best_mortgage_rates?province=Nova-Scotia" class="link"> Nova Scotia (NS)</a></p>   
-<p class="small">      <a href="http://www.ratesupermarket.ca/best_mortgage_rates?province=Nunavut" class="link">  Nunavut</a></p>
-
-</div>  
-
-<div class="footer_box">
-<p class="small">   <a href="http://www.ratesupermarket.ca/best_mortgage_rates?province=Ontario" class="link">  Ontario (ON)</a></p>   
-<p class="small">    <a href="http://www.ratesupermarket.ca/best_mortgage_rates?province=PEI" class="link">  Prince Edward Island (PEI)</a></p>
-
-<p class="small">   <a href="http://www.ratesupermarket.ca/best_mortgage_rates?province=Quebec" class="link">    Quebec (QB)</a></p>   
-<p class="small">     <a href="http://www.ratesupermarket.ca/best_mortgage_rates?province=Saskatchewan" class="link">  Saskatchewan (SA)</a></p>
-<p class="small">  <a href="http://www.ratesupermarket.ca/best_mortgage_rates?province=Yukon" class="link"> Yukon</a></p>   
-</div>
-
-
-<div class="footer_box">
-<p class="small"> By city:</p>
-<p class="small">  <a href="http://www.ratesupermarket.ca/best_mortgage_rates/Brampton.html" class="link">Brampton</a></p>
-<p class="small"> <a href="http://www.ratesupermarket.ca/best_mortgage_rates/Burlington.html" class="link">Burlington</a>
-</p>
-<p class="small"> <a href="http://www.ratesupermarket.ca/best_mortgage_rates/Calgary.html" class="link">Calgary</a>
-</p>
-
-  <p class="small"> <a href="http://www.ratesupermarket.ca/best_mortgage_rates/Kitchener-Waterloo.html" class="link">Kitchener-Waterloo (KW)</a></p>
-<p class="small">  <a href="/mortgage_refinancing_toronto.html" class="link">Mortgage Refinancing Toronto</a>	</p>	 
-
-</div>
-
-<div class="footer_box">
-<p class="small"> <a href="http://www.ratesupermarket.ca/best_mortgage_rates/Edmonton.html" class="link">Edmonton</a></p><p class="small"> <a href="http://www.ratesupermarket.ca/best_mortgage_rates/Halifax.html" class="link">Halifax</a></p>
-
-<p class="small"> <a href="http://www.ratesupermarket.ca/best_mortgage_rates/Mississauga.html" class="link">Mississauga</a>
-</p>
-<p class="small"> <a href="http://www.ratesupermarket.ca/best_mortgage_rates/Oakville.html" class="link">Oakville</a></p>
-<p class="small"> <a href="http://www.ratesupermarket.ca/best_mortgage_rates/Toronto.html" class="link">Toronto (TO)</a>
-</p>	 
-<p class="small"> <a href="http://www.ratesupermarket.ca/best_mortgage_rates_toronto.html" class="link">Best mortgage rates Toronto</a>
-</p>	 
-</div>
-
-  	</div>
-
-<div id="disclaimer" style="text-align: left; margin: 0;">
-  <p class="small_font"><b>PLEASE NOTE:</b> RateSupermarket.ca is an independent, impartial information only
-    website that is not, and does not claim to be, a mortgage broker or mortgage lender. 
-	RateSupermarket.ca does not take any responsibility for the rates, products and their features 
-	displayed on the website, as these are subject to 
-	change without notice at any time, and are 
-	for informational purposes only. Please contact the lender or broker directly for more details.</p>
-  </div>
+  </p></div><div id="disclaimer" style="text-align: left; margin: 0;">
+ <img src="http://www.ratesupermarket.ca/modules/common/images/disclaimer.jpg" alt="RateSupermarket.ca disclaimer">  </div>
 
 <div id="footer">
-  <p><a href="http://www.ratesupermarket.ca/sitemap" class="button">Site map</a>
-    - <a href="http://www.ratesupermarket.ca/mortgage/contactus" class="button">Contact us</a> 
-	- <a href="http://www.ratesupermarket.ca/mortgage/aboutus" class="button">About us</a> 
-	- <a href="http://www.ratesupermarket.ca/mortgage/press" class="button">Press</a> 
+  <p><a href="http://www.ratesupermarket.ca/sitemap/" class="button">Site map</a>
+    - <a href="http://www.ratesupermarket.ca/contactus/" class="button" rel="nofollow">Contact us</a> 
+	- <a href="http://www.ratesupermarket.ca/aboutus/" class="button" rel="nofollow">About us</a> 
+	- <a href="http://www.ratesupermarket.ca/press/" class="button" rel="nofollow">Press</a> 
 	- <a href="http://www.ratesupermarket.ca/articles/" class="button">Articles</a> 
-	-	<a href="http://ratesupermarket.ca/blog" class="button">Blog</a> 
-	- <a href="http://www.ratesupermarket.ca/mortgage/glossary" class="button">Glossary</a>
-    - <a href="http://www.ratesupermarket.ca/partners" class="button">Mortgage
-    lenders and brokers we compare</a> 
-	-
-	<a href="http://www.ratesupermarket.ca/faq.html" class="button">FAQ</a>
-	- <a href="http://www.ratesupermarket.ca/mortgage/help" class="button">
-    Help</a> - <a href="http://www.ratesupermarket.ca/search/search.php" class="button">Search</a>
+	-	<a href="http://www.ratesupermarket.ca/blog/" class="button">Blog</a> 
+	- <a href="http://www.ratesupermarket.ca/mortgage/glossary/" class="button" rel="nofollow">Glossary</a>
+    - <a href="http://www.ratesupermarket.ca/partners/" class="button" rel="nofollow">Partners</a>	
+    - <a href="http://forums.ratesupermarket.ca/" class="button">Forums</a>	
+	- <a href="http://www.ratesupermarket.ca/faq/" class="button">FAQ</a>
+	- <a href="http://www.ratesupermarket.ca/mortgage/help/" class="button" rel="nofollow">Help</a> - <a href="http://www.ratesupermarket.ca/search/search.php" class="button" rel="nofollow">Search</a>
   </p>
 </div>
 <div id="footer_rights"> 
-  <p>Copyright 2008 RateSupermarket.ca Inc. </p>
+  <p>Copyright 2009 RateSupermarket.ca Inc. </p>
 <p> All Rights Reserved. </p>
   <p>
-  <a href="http://www.ratesupermarket.ca/mortgage/terms" class="link">Terms &amp; conditions</a>
-    - <a href="http://www.ratesupermarket.ca/mortgage/privacy_policy" class="link">Privacy
+  <a href="http://www.ratesupermarket.ca/terms/" class="link" rel="nofollow">Terms &amp; conditions</a>
+    - <a href="http://www.ratesupermarket.ca/privacy_policy/" class="link" rel="nofollow">Privacy
     policy</a></p></div>
 <div id="favourites"> 
-  <p><img src="http://www.ratesupermarket.ca/images/feed-icon-12x12-orange.gif" alt="original feed" border="0"> <a type="application/rss+xml" href="http://ratesupermarket.ca/articles/feed/" class="details">RSS feed for articles</a> </p>
-  <p><img src="http://www.ratesupermarket.ca/images/feed-icon-12x12-orange.gif" alt="original feed" border="0"> <a type="application/rss+xml" href="http://ratesupermarket.ca/blog/feed/" class="details">RSS feed for mortgage blog</a></p>
+  <p><img src="http://www.ratesupermarket.ca/images/feed-icon-12x12-orange.gif" alt="original feed" border="0"> <a type="application/rss+xml" href="http://ratesupermarket.ca/articles/feed/" class="details" rel="nofollow">RSS feed for articles</a> </p>
+  <p><img src="http://www.ratesupermarket.ca/images/feed-icon-12x12-orange.gif" alt="original feed" border="0"> <a type="application/rss+xml" href="http://ratesupermarket.ca/blog/feed/" class="details" rel="nofollow">RSS feed for mortgage blog</a></p>
 <p></p>
 <p>
 <!-- AddThis Button BEGIN -->
@@ -281,6 +221,9 @@ document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.
 var pageTracker = _gat._getTracker("UA-3888186-4");
 pageTracker._initData();
 pageTracker._trackPageview();
-</script></div>
+</script>
+</div>
+
+
 
 </body></html>
