--- a/y/ye/yel/yellowpages.co.in.html
+++ b/y/ye/yel/yellowpages.co.in.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the yellowpages.co.in privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216011752id_/http%3A//www.yellowpages.co.in/menu_content.php%3Fcontent_id%3D12) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the yellowpages.co.in privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616153907id_/http%3A//www.yellowpages.co.in/menu_content.php%3Fcontent_id%3D12) for the most accurate reproduction.-->
 
 <html><head>
 		<title> INFOMEDIA Yellow Pages 		</title>
@@ -15,7 +15,6 @@
 
 	<meta name="verify-v1" content="xe7LYEoQagRmbNzcKhuHJB/2gUG/ny/H6MreZe+zEuc="> 
         <meta name="verify-v1" content="Xoc70kB7dtDPEugQ+uJ+fGK81r+jnREVqQjBkq4I6ZA=">
-
 
 	<script src="/js/head-js.js"> </script><script src="/js/java_scripts.js"> </script><script src="/js/print.js"> </script></head>
 	
@@ -37,19 +36,27 @@
 					<a class="nostyle" href="http://www.infomediaindia.com/template.php?id=202" alt="Superbrands"><img class="logoimg" src="/images/superbrand.jpg" alt="Superbrands"></a>
 				</td>
 				<td align="right">
-						<script type="text/javascript"><!--
+					<!-- zone 12 -->
+		<script type="text/javascript">
 		google_ad_client = "pub-2197275406266510";
-		google_hints = "";
+		google_hints ="";
 		google_ad_width = 468;
 		google_ad_height = 60;
 		google_ad_format = "468x60_as";
-		google_ad_type = "text_image";
+		google_ad_type = "text";
 		google_ad_channel = "";
-		//-->
+		google_color_border = ['FEF200'];
+		google_color_bg = ['FFFFFF'];
+		google_color_link = ['000000'];
+		google_color_text = ['000000'];
+		google_color_url = ['000000'];         
+		google_alternate_ad_url = "";
+		google_alternate_color = "0000FF";
 		</script>
-		<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
 		</script>
-						</td>
+
+				</td>
 			</tr>
 			<tr>
 				<td colspan="3">
