immihelp.com (archived on 2009-06-16)
{
  "alexa_rank": 24115,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 1583,
  "classifier_probability": 0.91,
  "cross_domain_homepage_redir": false,
  "flesch_ease": null,
  "flesch_kincaid": NaN,
  "homepage_snapshot_redirected_domain": "immihelp.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090406015325id_/http://www.immihelp.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090406015325id_/http%3A//immihelp.com",
  "interval": "2009_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "immihelp.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090616154429id_/http%3A//www.immihelp.com/misc/privacy.html",
  "policy_title": "Immihelp Privacy Policy",
  "policy_url": "immihelp.com/misc/privacy.html",
  "sha1": "f3756343719b70adc9b91fc9a6367ad492d1ccbb",
  "simhash": 10582443637508204903,
  "simhash_updated": true,
  "site_hostname": "immihelp.com",
  "site_url": "http://immihelp.com",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20090616154429",
  "word_count": 217,
  "year": 2009
}

--- a/i/im/imm/immihelp.com.html
+++ b/i/im/imm/immihelp.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the immihelp.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216014858id_/http%3A//www.immihelp.com/misc/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the immihelp.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616154429id_/http%3A//www.immihelp.com/misc/privacy.html) for the most accurate reproduction.-->
 
 <html><!-- InstanceBegin template="/Templates/general.dwt" codeOutsideHTMLIsLocked="false" --><head>
 	<meta name="resource-type" content="document">
@@ -7,10 +7,11 @@
     <meta name="robots" content="ALL">
     <meta name="distribution" content="Global">
     <meta name="rating" content="General">	
-    <meta name="copyright" content="Copyright 1999-2008 immihelp.com All rights Reserved">
+    <meta name="copyright" content="Copyright 1999-2009 immihelp.com All rights Reserved">
 	<meta http-equiv="content-language" content="en-US">
 	<meta http-equiv="imagetoolbar" content="no">
 	<meta name="versan" content="1359512221973">  
+	<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
     <link href="/style.css" type="text/css" rel="stylesheet">
 	<script language="JavaScript" src="/common/utils.js"></script>		
     <!-- InstanceBeginEditable name="doctitle" -->
@@ -254,7 +255,7 @@ such as your password. </li>
       <center>
         <a href="/visas/visitor/" class="footer-link">Visitor Visa</a> <span class="footer-link-separator">|</span> 
         <a href="http://www.buyamericaninsurance.com/visitorsmedicalinsurance.jsp" class="footer-link">Visitors Medical Insurance</a> <span class="footer-link-separator">|</span> 
-		<a href="/forums/" class="footer-link">Discussion Forums</a>  <span class="footer-link-separator">|</span> 
+		<a href="/forum/" class="footer-link">Discussion Forums</a>  <span class="footer-link-separator">|</span> 
 		<a href="/experience/" class="footer-link">Read Experiences</a> <span class="footer-link-separator">|</span> 
 		<a href="/tracker/" class="footer-link">Tracker</a>		
 		<br>
@@ -279,7 +280,7 @@ such as your password. </li>
   </tr>
   <tr> 
     <td class="footer-copyright-td"> <center>
-        <span class="footer-copyright-text"> Copyright © 1999-2008 immihelp<sup>®</sup>.com
+        <span class="footer-copyright-text"> Copyright © 1999-2009 immihelp<sup>®</sup>.com
         All rights reserved. <br>
         immihelp<sup>®</sup>.com is private non-lawyer web site. Not affiliated with any government 
         agency. </span> </center></td>
